--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           use_existing_version_if_available: false
-          application_name: ci_cd_deploy_example
+          application_name: ci-cd-deploy-example
           environment_name: Handsonspringboot-env
           version_label: ${{github.SHA}}
           region: us-west-2
