--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -31,5 +31,10 @@ pipeline {
                 echo 'Save the assemblies generated from the compilation to test integration' 
             }
         }
+        stage('Test Edit') {
+            steps {
+                echo 'Edit Jenkinsfile integration GitHub' 
+            }
+        }
     }
 }
